# CooperativeEditor

./: .gitignore  AUTHORS  CMakeLists.txt  CMakeListsConan.txt  LICENSE  README.md  conanfile.txt  main.cpp  mainclient.cpp  mainserver.cpp
client/: SharedEditor.cpp  SharedEditor.h
client/controller/: Controller.h
client/model/: Model.cpp
components/: Identifier.cpp  Identifier.h  Message.cpp  Message.h  Symbol.cpp  Symbol.h
crdtAlgorithm/: CrdtAlgorithm.cpp  CrdtAlgorithm.h
network/: Connection.h
server/: NetworkServer.cpp  NetworkServer.h
server/controller/: Controller.cpp  Controller.h
server/model/: Model.cpp  Model.h
src/: mainclient.cpp  mainserver.cpp  test.cpp
src/client/controller/: Controller.cpp  Controller.h
src/client/model/: ClientFile.cpp  ClientFile.h  Model.cpp  Model.h
src/client/view/: View.cpp  View.h
src/client/view/struct/: ResizableStackedWidget.cpp  ResizableStackedWidget.h
src/client/view/windows/: EditUserProfile.cpp  EditUserProfile.h  Editor.cpp  Editor.h  FileVisualizer.cpp  FileVisualizer.h  Login.cpp  Login.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  SignUp.cpp  SignUp.h
src/common/: CrdtAlgorithm.cpp  CrdtAlgorithm.h  File.cpp  File.h  Serializable.cpp  Serializable.h  TcpSocket.cpp  TcpSocket.h  User.cpp  User.h
src/components/: Identifier.cpp  Identifier.h  Message.cpp  Message.h  Symbol.cpp  Symbol.h
src/components/messages/: BasicMessage.cpp  BasicMessage.h  CrdtMessage.cpp  CrdtMessage.h  CursorMessage.cpp  CursorMessage.h  FileContentMessage.cpp  FileContentMessage.h  FileListingMessage.cpp  FileListingMessage.h  FileMessage.cpp  FileMessage.h  Header.cpp  Header.h  LoginMessage.cpp  LoginMessage.h  MessageType.h  RequestMessage.cpp  RequestMessage.h  ResultMessage.cpp  ResultMessage.h  UserMessage.cpp  UserMessage.h  UserUpdateMessage.cpp  UserUpdateMessage.h
src/crdtAlgorithm/: CrdtAlgorithm.cpp  CrdtAlgorithm.h
src/include/lib/crdt/: CrdtAlgorithm.cpp  CrdtAlgorithm.h
src/include/lib/serialization/: Serializable.cpp  Serializable.h
src/include/lib/spdlog/fmt/: fmt.h  ostr.h
src/include/lib/spdlog/sinks/: sink-inl.h  sink.h
src/server/controller/: Controller.cpp  Controller.h
src/server/database/: Database.cpp  Database.h
src/server/model/: Database.cpp  Database.h  Model.cpp  Model.h  ServerFile.cpp  ServerFile.h
src/utility/: CrdtAlgorithm.cpp  CrdtAlgorithm.h
tests/client/: TestControllerClient.cpp  TestControllerClient.h  TestModelClient.cpp  TestModelClient.h  maintest.h  maintests.cpp
tests/server/: TestControllerServer.cpp  TestControllerServer.h  TestModelServer.cpp  TestModelServer.h  maintests.cpp
utility/: Utility.h
